# robothon-2023-board-localization

./: CMakeLists.txt  README.md  package.xml  setup.py
cfg/: board_localization_param.cfg
config/: board_localization_params_real.yaml  board_localization_params_sim.yaml
launch/: board_localization.launch
resources/: positive-cacao-379821-a0b54911257f.json
scripts/: board_localization.py  board_localization_fsm.py  camera_coordinate_a.py  multimeter_screen_reader.py  screen_read.py  screen_read_prev.py  text_read.py  visual_servoing.py
scripts/hrii_board_localization/utils/: geometry_msgs_operations.py  trajectoy_client_helper.py
src/: camera_coordinate.py  camera_coordinate_a.py  cavas.py  func..py  gui.py  screen_read.py  screen_reader.py  text_py.py  text_read.py
src/others/: color.py  realsense_read.py
