<?xml version="1.0"?>
<package format="2">
  <name>hrii_board_localization</name>
  <version>0.0.1</version>
  <description>The hrii_board_localization package</description>

  <maintainer email="hamidreza.raei@iit.it">Hamidreza Raei</maintainer>
  <maintainer email="mattia.leonori@iit.it">Mattia Leonori</maintainer>

  <license>GNU</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>roscpp</depend>
  <depend>eigen_conversions</depend>
  <depend>hrii_trajectory_planner</depend>
  <depend>hrii_robothon_msgs</depend>

</package>
